Test/traits/TraitPolymorphism.dfy.expect
TraitPolymorphism.dfy(56,10): Error: arguments must have comparable types (got C1 and T2)
TraitPolymorphism.dfy(58,6): Error: Method return value mismatch (expecting T2, got C1)
2 resolution/type errors detected in TraitPolymorphism.dfy
